--- a/templates/admin/view_user_index.html
+++ b/templates/admin/view_user_index.html
@@ -24,14 +24,14 @@ alert("{{ messages }}")
     <div class="page-section py-3 mt-md-n5 custom-index">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-md-3 py-3 py-md-0">
-            <div class="card-service wow fadeInUp">
-              <div class="circle-shape bg-secondary text-white">
-                 <span class="mai-shield-checkmark"></span>
-              </div>
-              <a class="nav-link" href="user_registration_list" > User Registered list</a>
-            </div>
-          </div>
+{#          <div class="col-md-3 py-3 py-md-0">#}
+{#            <div class="card-service wow fadeInUp">#}
+{#              <div class="circle-shape bg-secondary text-white">#}
+{#                 <span class="mai-shield-checkmark"></span>#}
+{#              </div>#}
+{#              <a class="nav-link" href="user_registration_list" > User Registered list</a>#}
+{#            </div>#}
+{#          </div>#}
           <div class="col-md-3 py-3 py-md-0">
             <div class="card-service wow fadeInUp">
               <div class="circle-shape bg-primary text-white">
@@ -40,14 +40,14 @@ alert("{{ messages }}")
              <a class="nav-link" href="user_accepted_list" >User Accepted list</a>
             </div>
           </div>
-          <div class="col-md-3 py-3 py-md-0">
-            <div class="card-service wow fadeInUp">
-              <div class="circle-shape bg-accent text-white">
-                <span class="mai-shield-checkmark"></span>
-              </div>
-               <a class="nav-link" href="user_rejected_list" >User Rejected list</a>
-            </div>
-          </div>
+{#          <div class="col-md-3 py-3 py-md-0">#}
+{#            <div class="card-service wow fadeInUp">#}
+{#              <div class="circle-shape bg-accent text-white">#}
+{#                <span class="mai-shield-checkmark"></span>#}
+{#              </div>#}
+{#               <a class="nav-link" href="user_rejected_list" >User Rejected list</a>#}
+{#            </div>#}
+{#          </div>#}
 {#            <div class="col-md-3 py-3 py-md-0">#}
 {#            <div class="card-service wow fadeInUp">#}
 {#              <div class="circle-shape bg-accent text-white">#}
