--- a/templates/admin/user_accepted_list.html
+++ b/templates/admin/user_accepted_list.html
@@ -24,14 +24,14 @@ alert("{{ messages }}")
     <div class="page-section py-3 mt-md-n5 custom-index">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-md-3 py-3 py-md-0">
-            <div class="card-service wow fadeInUp">
-              <div class="circle-shape bg-secondary text-white">
-                 <span class="mai-shield-checkmark"></span>
-              </div>
-              <a class="nav-link" href="user_registration_list" > User Registered list</a>
-            </div>
-          </div>
+{#          <div class="col-md-3 py-3 py-md-0">#}
+{#            <div class="card-service wow fadeInUp">#}
+{#              <div class="circle-shape bg-secondary text-white">#}
+{#                 <span class="mai-shield-checkmark"></span>#}
+{#              </div>#}
+{#              <a class="nav-link" href="user_registration_list" > User Registered list</a>#}
+{#            </div>#}
+{#          </div>#}
           <div class="col-md-3 py-3 py-md-0">
             <div class="card-service wow fadeInUp">
               <div class="circle-shape bg-primary text-white">
@@ -40,14 +40,14 @@ alert("{{ messages }}")
              <a class="nav-link" href="user_accepted_list" >User Accepted list</a>
             </div>
           </div>
-          <div class="col-md-3 py-3 py-md-0">
-            <div class="card-service wow fadeInUp">
-              <div class="circle-shape bg-accent text-white">
-                <span class="mai-shield-checkmark"></span>
-              </div>
-               <a class="nav-link" href="user_rejected_list" >User Rejected list</a>
-            </div>
-          </div>
+{#          <div class="col-md-3 py-3 py-md-0">#}
+{#            <div class="card-service wow fadeInUp">#}
+{#              <div class="circle-shape bg-accent text-white">#}
+{#                <span class="mai-shield-checkmark"></span>#}
+{#              </div>#}
+{#               <a class="nav-link" href="user_rejected_list" >User Rejected list</a>#}
+{#            </div>#}
+{#          </div>#}
 {#            <div class="col-md-3 py-3 py-md-0">#}
 {#            <div class="card-service wow fadeInUp">#}
 {#              <div class="circle-shape bg-accent text-white">#}
@@ -76,9 +76,9 @@ alert("{{ messages }}")
                                  <th class="success" style="color: white;">address</th>
                                  <th class="success" style="color: white;">Proof</th>
 {#                                  <th class="success" style="color: white;">Place</th>#}
-                                   <th class="success" style="color: white;">District</th>
+{#                                   <th class="success" style="color: white;">District</th>#}
 {#                                  <th class="success" style="color: white;">Status</th>#}
-                                    <th class="success" style="color: white;">Accept</th>
+{#                                    <th class="success" style="color: white;">Accept</th>#}
           <th class="success" style="color: white;">Reject</th>
               {% for i in USER %}
                                 <tr style="background-color:white;width: 700px;">
@@ -93,8 +93,8 @@ alert("{{ messages }}")
                                     <td>{{ i.district }}</td>
 {#                                    <td>{{ i.status }}</td>#}
 
-                                    <td><button style="background-color:lightslategray"><a href="user_accepted?id={{ i.user_id}}" class=" btn btn-success" style="color:black">Approve</a></button></td>
-                                    <td><button style="background-color:lightslategray"><a href="user_rejected?id={{ i.user_id}}" class=" btn btn-danger" style="color:black">Reject</a></button></td>
+{#                                    <td><button style="background-color:lightslategray"><a href="user_accepted?id={{ i.user_id}}" class=" btn btn-success" style="color:black">Approve</a></button></td>#}
+{#                                    <td><button style="background-color:lightslategray"><a href="user_rejected?id={{ i.user_id}}" class=" btn btn-danger" style="color:black">Reject</a></button></td>#}
 
                                 </tr>
               {% endfor %}
